include_HEADERS = \
	mach-o/arch.h \
	mach-o/arm/reloc.h \
	mach-o/fat.h \
	mach-o/getsect.h \
	mach-o/i386/swap.h \
	mach-o/ldsyms.h \
	mach-o/loader.h \
	mach-o/nlist.h \
	mach-o/ppc/reloc.h \
	mach-o/ppc/swap.h \
	mach-o/ranlib.h \
	mach-o/reloc.h \
	mach-o/stab.h \
	mach-o/swap.h \
	mach-o/x86_64/reloc.h
