nobase_include_HEADERS = \
	mach-o/arch.h \
	mach-o/arm/reloc.h \
	mach-o/fat.h \
	mach-o/getsect.h \
	mach-o/i386/swap.h \
	mach-o/ldsyms.h \
	mach-o/loader.h \
	mach-o/nlist.h \
	mach-o/ppc/reloc.h \
	mach-o/ppc/swap.h \
	mach-o/ranlib.h \
	mach-o/reloc.h \
	mach-o/stab.h \
	mach-o/swap.h \
	mach-o/x86_64/reloc.h

noinst_HEADERS = \
	architecture/i386/fpu.h \
	architecture/i386/frame.h \
	architecture/m88k/fp_regs.h \
	architecture/m88k/reg_help.h \
	architecture/nrw/macro_help.h \
	architecture/nrw/reg_help.h \
	architecture/sparc/reg.h \
	cbt/libsyminfo.h \
	coff/aouthdr.h \
	coff/base_relocs.h \
	coff/bytesex.h \
	coff/debug_directory.h \
	coff/filehdr.h \
	coff/ms_dos_stub.h \
	coff/scnhdr.h \
	coff/syment.h \
	elf/dwarf2.h \
	gnu/a.out.h \
	gnu/exec.h \
	gnu/symseg.h \
	mach/arm/thread_status.h \
	mach/hppa/thread_status.h \
	mach/i860/thread_status.h \
	mach/m68k/thread_status.h \
	mach/m88k/thread_status.h \
	mach/machine.h \
	mach/ppc/_structs.h \
	mach/ppc/thread_status.h \
	mach/sparc/thread_status.h \
	mach-o/dyld.h \
	mach-o/dyld_debug.h \
	mach-o/dyld_gdb.h \
	mach-o/dyld_priv.h \
	mach-o/gmon.h \
	mach-o/hppa/reloc.h \
	mach-o/hppa/swap.h \
	mach-o/i860/reloc.h \
	mach-o/i860/swap.h \
	mach-o/kld.h \
	mach-o/m68k/swap.h \
	mach-o/m88k/reloc.h \
	mach-o/m88k/swap.h \
	mach-o/redo_prebinding.h \
	mach-o/rld.h \
	mach-o/rld_state.h \
	mach-o/sarld.h \
	mach-o/sparc/reloc.h \
	mach-o/sparc/swap.h \
	opcode/arm.h \
	standalone/libsa.h \
	stuff/allocate.h \
	stuff/arch.h \
	stuff/best_arch.h \
	stuff/bool.h \
	stuff/breakout.h \
	stuff/bytesex.h \
	stuff/crc32.h \
	stuff/dylib_roots.h \
	stuff/dylib_table.h \
	stuff/errors.h \
	stuff/execute.h \
	stuff/guess_short_name.h \
	stuff/hash_string.h \
	stuff/hppa.h \
	stuff/lto.h \
	stuff/macosx_deployment_target.h \
	stuff/ofile.h \
	stuff/openstep_mach.h \
	stuff/print.h \
	stuff/reloc.h \
	stuff/rnd.h \
	stuff/seg_addr_table.h \
	stuff/symbol.h \
	stuff/symbol_list.h \
	stuff/SymLoc.h \
	stuff/unix_standard_mode.h \
	stuff/version_number.h \
	stuff/vm_flush_cache.h \
	sys/gmon.h
