dist_man1_MANS = \
	ar.1 \
	as.1 \
	gprof.1 \
	ld_classic.1 \
	nm.1 \
	otool.1 \
	ranlib.1 \
	segedit.1 \
	size.1 \
	strings.1 \
	strip.1 \
	lipo.1 \
	libtool.1 \
	cmpdylib.1 \
	pagestuff.1 \
	redo_prebinding.1 \
	nmedit.1 \
	install_name_tool.1 \
	codesign_allocate.1 \
	ctf_insert.1 \
	indr.1 \
	checksyms.1 \
	seg_addr_table.1 \
	check_dylib.1 \
	mtoc.1

dist_man3_MANS = \
	kld.3 \
	arch.3 \
	get_end.3 \
	end.3 \
	getsectbyname.3 \
	getsectbynamefromheader.3 \
	getsectdata.3 \
	getsectdatafromheader.3 \
	getsegbyname.3 \
	libsyminfo.3 \
	redo_prebinding.3

dist_man5_MANS = \
	Mach-O.5 \
	a.out.5 \
	ranlib.5 \
	stab.5
