nobase_include_HEADERS = \
	mach-o/prune_trie.h

noinst_HEADERS = \
	Architectures.hpp \
	LinkEdit.hpp \
	OutputFile.h \
	dwarf2.h \
	parsers/archive_file.h \
	parsers/lto_file.h \
	parsers/macho_dylib_file.h \
	parsers/macho_relocatable_file.h \
	parsers/opaque_section_file.h \
	FileAbstraction.hpp \
	LinkEditClassic.hpp \
    Resolver.h \
	ld.hpp \
	passes/branch_island.h \
	passes/compact_unwind.h \
	passes/dylibs.h \
	passes/huge.h \
	passes/order_file.h \
	passes/tlvp.h \
	passes/branch_shim.h \
 	passes/dtrace_dof.h \
	passes/got.h \
	passes/objc.h \
	passes/stubs/make_stubs.h \
	passes/stubs/stub_arm_classic.hpp \
 	passes/stubs/stub_x86.hpp \
	passes/stubs/stub_x86_64_classic.hpp \
	passes/stubs/stub_arm.hpp \
	passes/stubs/stub_ppc_classic.hpp \
 	passes/stubs/stub_x86_64.hpp \
	passes/stubs/stub_x86_classic.hpp \
	HeaderAndLoadCommands.hpp \
	MachOFileAbstraction.hpp  \
	SymbolTable.h \
	lto_file.hpp \
	InputFiles.h \
	MachOTrie.hpp \
	Options.h \
	debugline.h 
